--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ resume: true
 resume-external: false
 resume-url: resume
 
-url: https://0x00Check.github.io
+url: "https://0x00Check.com"
 #url: "http://localhost:4000"
 
 permalink: /:title/
