Update config url

--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,8 @@ resume: true
 resume-external: false
 resume-url: resume
 
-url: "https://0x00Check.com"
-baseurl: ""
-#url: "http://localhost:4000"
+url: "https://0x00Check.com/"
+#url: "http://127.0.0.1:4000"
 
 permalink: /:title/
 
