--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 0x00Check
-bio: Reflections on the journey of chaotic good.
+bio: Reflections on the journey of chaotic good
 description: 0x00Check
 external-image: true
 picture: https://avatars.githubusercontent.com/u/102482427?v=4
